--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,7 +10,7 @@
 
 :root {
   --clr-primary: #e05a31;
-  --clr-bg: #eeeeee;
+  --clr-bg: #dfdfdf;
 }
 
 body {
@@ -18,6 +18,12 @@ body {
   background-color: var(--clr-bg);
 }
 
+a {
+  text-decoration: none;
+  color: initial;
+}
+
+/* Home Page */
 main {
   width: 90vw;
   max-width: 1170px;
@@ -37,7 +43,7 @@ h2 {
   background-color: var(--clr-primary);
 }
 
-.app-container {
+.home-container {
   margin: 2rem 0;
   display: grid;
   grid-template-columns: 1fr 300px;
@@ -47,8 +53,103 @@ h2 {
 
 /* Posts */
 .posts {
+  padding: 0 1rem;
   position: relative;
   text-align: center;
+}
+
+.posts-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  justify-content: center;
+  gap: 2rem;
+  justify-items: center;
+  /* padding: 0.5rem 0; */
+}
+
+/* Post preview */
+
+.post-preview {
+  border-radius: 8px;
+  background-color: #fff;
+  position: relative;
+  width: 100%;
+}
+
+.post-preview-creator {
+  position: absolute;
+  left: 2rem;
+  top: 1rem;
+  color: rgb(6, 4, 14);
+  font-weight: 700;
+}
+
+.post-preview-created-at {
+  position: absolute;
+  left: 2rem;
+  top: 2.3rem;
+  font-size: 12px;
+  color: rgb(6, 4, 14);
+  font-weight: 700;
+}
+
+.post-preview img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+}
+
+.post-preview .content {
+  padding: 1rem;
+  text-align: left;
+}
+
+.post-preview .content-tags {
+  color: #666;
+  margin-bottom: 0.2rem;
+}
+
+.post-preview .content-title {
+  margin-bottom: 0.3rem;
+}
+
+.post-preview .content-message {
+  margin-bottom: 1.5rem;
+}
+
+.post-preview .content-footer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.post-preview .content-footer button {
+  display: flex;
+  justify-content: center;
+  padding: 0.4rem;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  background-color: var(--clr-bg);
+  border-radius: 8px;
+  transition: all 0.3s linear;
+}
+
+.post-preview .content-footer button:hover {
+  transform: translateY(-2px);
+}
+
+.post-preview .content-footer button svg {
+  margin-right: 0.3rem;
+}
+
+.post-preview .content-footer .like {
+  color: rgb(13, 47, 121);
+}
+
+.post-preview .content-footer .del {
+  color: rgb(168, 39, 39);
 }
 
 /* Form */
@@ -59,6 +160,7 @@ form {
   display: flex;
   flex-direction: column;
   width: 300px;
+  height: 460px;
   background-color: #fff;
 }
 
@@ -99,6 +201,55 @@ form textarea {
 
 .clear-btn {
   background-color: rgb(199, 58, 58);
+}
+
+/* Single Item Page */
+
+.single-post-page {
+  position: relative;
+  padding: 3rem;
+  margin: 0 auto;
+  max-width: 1170px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
+  justify-content: center;
+  gap: 3rem;
+}
+
+.single-post-page img {
+  width: 100%;
+  object-fit: cover;
+}
+
+.single-post-line {
+  margin: 0.5rem 0;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  column-gap: 1rem;
+  font-weight: bold;
+}
+
+.single-post-line span {
+  font-style: italic;
+  font-weight: 400;
+}
+
+.go-back-btn {
+  color: rebeccapurple;
+}
+
+.edit-btn {
+  width: 100%;
+  background-color: var(--clr-primary);
+  color: #fff;
+  padding: 0.5rem;
+  text-transform: uppercase;
+  margin-top: 1.5rem;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  border-radius: 8px;
 }
 
 /* Loader */
