--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -98,7 +98,6 @@ main {
   display: grid;
   grid-template-columns: 1fr 300px;
   justify-content: center;
-  justify-items: center;
 }
 
 /* Posts */
@@ -110,7 +109,7 @@ main {
 
 .posts-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   justify-content: center;
   gap: 2rem;
   justify-items: center;
@@ -123,7 +122,7 @@ main {
   border-radius: 8px;
   background-color: #fff;
   position: relative;
-  width: 100%;
+  width: 300px;
 }
 
 .post-preview-creator {
@@ -210,7 +209,7 @@ main {
   display: flex;
   flex-direction: column;
   width: 300px;
-  height: 460px;
+  height: max-content;
   background-color: #fff;
 }
 
@@ -347,11 +346,10 @@ main {
 .profile-page-container {
   width: 90vw;
   max-width: 1170px;
-  margin: 0 auto;
+  margin: 2rem auto;
   display: grid;
-  grid-template-columns: auto 300px;
+  grid-template-columns: 1fr 300px;
   justify-content: center;
-  justify-items: center;
   column-gap: 1rem;
 }
 
